# Syntecnia

./: .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  PLAN-MIGRACION-RUST.md  README.md  SPEC-CONCURRENCIA.md  SYNSEMA_SKILL.md  SYNTECNIA_SKILL.md  docker-compose.yml  install-skill.sh  pyproject.toml  setup.py
.synsema-skill/: INDEX.md  SKILL.md  agents.md  builtins.md  capabilities.md  concurrency.md  deploy.md  frontend.md  human.md  llm.md  memory.md  modules.md  observability.md  patterns.md  pitfalls.md  processes.md  secrets.md  serve.md  stdlib.md  structure.md  syntax.md  testing.md  types.md  why-synsema.md
.syntecnia-skill/: INDEX.md  agents.md  builtins.md  capabilities.md  concurrency.md  deploy.md  frontend.md  human.md  llm.md  memory.md  observability.md  patterns.md  pitfalls.md  serve.md  stdlib.md  structure.md  syntax.md  types.md  why-syntecnia.md
conformance/: _serve_oracle.py  run_a1.py  run_a2.py  run_advanced.py  run_all.py  run_capa5.py  run_capa6.py  run_capa6_db.py  run_capa7_pm.py  run_capa7_swarm.py  run_flat.py  run_gate.py  run_proxy.py  run_serve_s1.py  run_serve_s2.py  run_serve_s3.py  run_serve_s4.py  run_serve_s5.py  run_serve_s6.py  run_serve_s789.py  run_serve_templates.py  run_statepersist.py  run_vhost.py  serve_harness.py
docs/: DISTRIBUCION.md  INTERPRETE-ASYNC.md
dogfood/: numeric.syn
engine/: Cargo.toml
engine/crates/synsema-agents/src/: blackboard.rs  builtins.rs  memory.rs  swarm.rs
engine/crates/synsema-capabilities/: Cargo.toml
engine/crates/synsema-capabilities/src/: intent.rs  model.rs  secure.rs
engine/crates/synsema-cli/: Cargo.toml
engine/crates/synsema-cli/src/: main.rs  update.rs
engine/crates/synsema-core/: Cargo.toml
engine/crates/synsema-core/src/: arrays.rs  ast.rs  interpreter.rs  parser.rs  secret.rs  templates.rs  types.rs
engine/crates/synsema-core/tests/: batch2_conformance.rs  batch7_conformance.rs  bytes_conformance.rs  core_conformance.rs  tool_calling_conformance.rs
engine/crates/synsema-llm/: Cargo.toml
engine/crates/synsema-llm/src/: context.rs  human.rs  lib.rs
engine/crates/synsema-runtime/src/: daemon.rs  engine.rs  error_reporter.rs  lib.rs  llm_providers.rs  parallel.rs  persistence.rs  serve.rs
engine/crates/synsema-runtime/tests/: bytes_e2e.rs  engine_concurrency.rs  engine_db.rs  engine_http.rs  engine_io.rs  engine_mongo.rs  engine_mysql.rs  engine_pg.rs  engine_recovery.rs  engine_redis.rs  engine_secrets.rs  engine_security.rs  gaps_conformance.rs  llm_text_prompt.rs  proxy_e2e.rs  proxy_headers_e2e.rs  serve_isolation.rs  serve_llm_provider.rs  serve_log.rs  serve_modules.rs  serve_progress_persist.rs  state_path_resolution.rs  test_framework.rs
engine/crates/synsema-runtime/tests/fixtures/: serve_mod_selfmap.syn  serve_mod_sibling.syn
engine/crates/synsema-stdlib/: Cargo.toml
engine/crates/synsema-stdlib/src/: database.rs  hashing.rs  http.rs  secrets.rs  server.rs
engine/crates/synsema-stdlib/tests/: tls_integration.rs
examples/: agent_demo.syn  blog_demo.syn  error_demo.syn  flat_demo.fsyn  full_demo.syn  hello.syn  lambda_demo.syn  landing_demo.syn  llm_demo.syn  (+5 more)
rust/: Cargo.toml
rust/crates/synsema-agents/: Cargo.toml
rust/crates/synsema-agents/src/: builtins.rs  lib.rs  memory.rs  progress.rs  resource_lock.rs
rust/crates/synsema-capabilities/: Cargo.toml
rust/crates/synsema-capabilities/src/: lib.rs  model.rs  secure.rs
rust/crates/synsema-cli/: Cargo.toml  build.rs
rust/crates/synsema-cli/src/: main.rs
rust/crates/synsema-core/: Cargo.toml
rust/crates/synsema-core/src/: addressable.rs  ast.rs  ast_api.rs  bytesutil.rs  flat_syntax.rs  interpreter.rs  lexer.rs  lib.rs  math.rs  number.rs  parser.rs  secret.rs  templates.rs  testgen.rs  tokens.rs  types.rs
rust/crates/synsema-core/tests/: arrays_conformance.rs  assert_conformance.rs  batch6_conformance.rs  core_conformance.rs  math_conformance.rs
rust/crates/synsema-llm/src/: provider.rs  validator.rs
rust/crates/synsema-runtime/: Cargo.toml
rust/crates/synsema-runtime/src/: engine.rs  error_reporter.rs  lib.rs  llm_providers.rs  parallel.rs  recovery.rs  serve.rs  speculative.rs
rust/crates/synsema-runtime/tests/: batch6_e2e.rs  batch7_e2e.rs  engine_human_llm.rs  engine_parallel.rs  engine_secrets.rs  gaps_conformance.rs  llm_text_prompt.rs  redirect_e2e.rs  serve_flags.rs  tool_calling_e2e.rs
rust/crates/synsema-runtime/tests/fixtures/: safe_tool_loop.syn
rust/crates/synsema-stdlib/: Cargo.toml
rust/crates/synsema-stdlib/src/: acme.rs  cron.rs  database.rs  http.rs  lib.rs  secrets.rs  server.rs
rust/crates/synsema-stdlib/tests/: acme_pebble.rs  http2_proxy.rs
rust/crates/syntecnia-agents/: Cargo.toml
rust/crates/syntecnia-agents/src/: blackboard.rs  builtins.rs  lib.rs  memory.rs  progress.rs  resource_lock.rs  swarm.rs
rust/crates/syntecnia-capabilities/: Cargo.toml
rust/crates/syntecnia-capabilities/src/: intent.rs  lib.rs  model.rs  secure.rs
rust/crates/syntecnia-cli/: Cargo.toml
rust/crates/syntecnia-cli/src/: main.rs
rust/crates/syntecnia-core/: Cargo.toml
rust/crates/syntecnia-core/src/: addressable.rs  ast.rs  ast_api.rs  flat_syntax.rs  interpreter.rs  lexer.rs  lib.rs  number.rs  parser.rs  templates.rs  testgen.rs  tokens.rs  types.rs
rust/crates/syntecnia-core/tests/: core_conformance.rs
rust/crates/syntecnia-llm/: Cargo.toml
rust/crates/syntecnia-llm/src/: context.rs  human.rs  lib.rs  provider.rs  validator.rs
rust/crates/syntecnia-runtime/: Cargo.toml
rust/crates/syntecnia-runtime/src/: daemon.rs  engine.rs  error_reporter.rs  lib.rs  parallel.rs  persistence.rs  recovery.rs  serve.rs  speculative.rs
rust/crates/syntecnia-runtime/tests/: engine_concurrency.rs  engine_db.rs  engine_human_llm.rs  engine_parallel.rs  engine_recovery.rs  engine_security.rs  proxy_e2e.rs
rust/crates/syntecnia-stdlib/: Cargo.toml
rust/crates/syntecnia-stdlib/src/: acme.rs  cron.rs  database.rs  http.rs  lib.rs  mimetypes.rs  server.rs
rust/crates/syntecnia-stdlib/tests/: acme_pebble.rs  http2_proxy.rs  tls_integration.rs
(+112 files in other folders)
