[project]
name = "synsema"
version = "0.1.0"
description = "A programming language designed for AI agents"
requires-python = ">=3.10"
license = "MIT"
dependencies = []  # zero dependencies — stdlib only

[project.scripts]
synsema = "synsema.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
