[workspace]
resolver = "2"
members = [
    "crates/synsema-core",
    "crates/synsema-capabilities",
    "crates/synsema-stdlib",
    "crates/synsema-agents",
    "crates/synsema-llm",
    "crates/synsema-runtime",
    "crates/synsema-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Synsema — a programming language designed for AI agents (Rust port)"
repository = "https://github.com/kitecosmic/synsema"

# Dependencias compartidas se pinean acá y se referencian con `workspace = true`
# desde cada crate. Se agregan por capa, no antes de necesitarlas.
[workspace.dependencies]
# Modelo numérico: enteros de precisión arbitraria como Python (fast-path i64 +
# promoción a BigInt por overflow). num-traits/num-integer dan conversores y ops.
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
# Map ordenado (Python dict preserva orden de inserción) y regex (puro Rust, sin C).
indexmap = "2"
regex = "1"
# Decimal exacto base-10 para dinero/finanzas (tipo Decimal). Puro Rust (96-bit,
# 28-29 dígitos significativos), sin deps C → preserva el binario único estático.
rust_decimal = "1"
# RNG no-cripto para los builtins random()/random_int() (paridad con el `random` de
# Python). getrandom ya entra transitivamente; rand da la API de distribución/rango.
rand = "0.8"
# JSON para el subcomando de conformidad del CLI y la persistencia de progress/memory.
# `preserve_order`: los objetos JSON entrantes preservan el orden de inserción (como
# el dict de Python), para paridad byte-a-byte en las respuestas del server.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# Fecha/hora para los builtins de time (UTC). Sin feature `clock` → sin riesgo de C;
# now() usa std::time. HTTP usa std::net (sin TLS por ahora); cron usa std::thread.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# SQLite estático (binario único, sin DLL). Compila C → requiere gcc (WinLibs en Windows).
rusqlite = { version = "0.32", features = ["bundled"] }
# Secretos (feature `secret`): todo puro-Rust (RustCrypto), sin deps C → preserva el
# binario único estático.
#   zeroize  : borra el plaintext de memoria al drop (best-effort, §5 del spec).
#   subtle   : comparación constant-time (igualdad de secrets + verify_hmac, §5/§4).
#   hmac+sha2: HMAC-SHA256/512 para verify_hmac/hmac_sha256 (§4; SHA-1 excluido a propósito).
zeroize = "1"
subtle = "2"
hmac = "0.12"
sha2 = "0.10"
# Completitud matemática (Batch 4): ambas PURO-Rust, sin C → preservan el binario único
# estático.
#   libm        : funciones especiales (gamma/lgamma/erf/erfc); port Rust de musl libm (rust-lang).
#   num-complex : tipo complejo + cmath (mismo ecosistema num-* que num-bigint/num-traits/num-integer).
libm = "0.2"
num-complex = "0.4"
# Arrays numéricos n-dimensionales + álgebra lineal (Batch 5). AMBAS PURO-Rust, SIN C
# (sin BLAS/LAPACK/openblas/mkl ni ningún `*-sys`) → preservan el binario único estático.
#   ndarray : tipo array n-dimensional + vectorización/broadcasting/reducciones.
#   faer    : álgebra lineal densa puro-Rust (solve/det/inv/eig/svd), con SIMD (pulp/gemm).
# `default-features = false`: se desactiva `rayon` (multihilo) porque arrastra `spindle →
# atomic-wait → windows-sys` (un crate `*-sys`); la regla "cero `*-sys`" manda sobre el
# multihilo. Queda el SIMD (pulp) → sigue rápido y 100% puro-Rust sin `*-sys`.
ndarray = "0.16"
faer = { version = "0.24", default-features = false, features = ["std", "linalg"] }
synsema-core = { path = "crates/synsema-core" }
synsema-capabilities = { path = "crates/synsema-capabilities" }
synsema-stdlib = { path = "crates/synsema-stdlib" }
synsema-agents = { path = "crates/synsema-agents" }
synsema-llm = { path = "crates/synsema-llm" }
synsema-runtime = { path = "crates/synsema-runtime" }

[profile.release]
opt-level = 3
lto = true
