[workspace]
resolver = "2"
members = [
    "crates/synsema-core",
    "crates/synsema-capabilities",
    "crates/synsema-stdlib",
    "crates/synsema-agents",
    "crates/synsema-llm",
    "crates/synsema-runtime",
    "crates/synsema-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Synsema — a programming language designed for AI agents (Rust port)"
repository = "https://github.com/kitecosmic/synsema"

# Dependencias compartidas se pinean acá y se referencian con `workspace = true`
# desde cada crate. Se agregan por capa, no antes de necesitarlas.
[workspace.dependencies]
# Modelo numérico: enteros de precisión arbitraria como Python (fast-path i64 +
# promoción a BigInt por overflow). num-traits/num-integer dan conversores y ops.
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
# Map ordenado (Python dict preserva orden de inserción) y regex (puro Rust, sin C).
indexmap = "2"
regex = "1"
# Decimal exacto base-10 para dinero/finanzas (tipo Decimal). Puro Rust (96-bit,
# 28-29 dígitos significativos), sin deps C → preserva el binario único estático.
rust_decimal = { version = "1", features = ["db-postgres"] }
# RNG no-cripto para los builtins random()/random_int() (paridad con el `random` de
# Python). getrandom ya entra transitivamente; rand da la API de distribución/rango.
rand = "0.8"
# JSON para el subcomando de conformidad del CLI y la persistencia de progress/memory.
# `preserve_order`: los objetos JSON entrantes preservan el orden de inserción (como
# el dict de Python), para paridad byte-a-byte en las respuestas del server.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# Fecha/hora para los builtins de time (UTC). Sin feature `clock` → sin riesgo de C;
# now() usa std::time. HTTP usa std::net (sin TLS por ahora); cron usa std::thread.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# SQLite estático (binario único, sin DLL). Compila C → requiere gcc (WinLibs en Windows).
rusqlite = { version = "0.32", features = ["bundled"] }
# Secretos (feature `secret`): todo puro-Rust (RustCrypto), sin deps C → preserva el
# binario único estático.
#   zeroize  : borra el plaintext de memoria al drop (best-effort, §5 del spec).
#   subtle   : comparación constant-time (igualdad de secrets + verify_hmac, §5/§4).
#   hmac+sha2: HMAC-SHA256/512 para verify_hmac/hmac_sha256 (§4; SHA-1 excluido a propósito).
zeroize = "1"
subtle = "2"
hmac = "0.12"
sha2 = "0.10"
# Completitud matemática (Batch 4): ambas PURO-Rust, sin C → preservan el binario único
# estático.
#   libm        : funciones especiales (gamma/lgamma/erf/erfc); port Rust de musl libm (rust-lang).
#   num-complex : tipo complejo + cmath (mismo ecosistema num-* que num-bigint/num-traits/num-integer).
libm = "0.2"
num-complex = "0.4"
# Arrays numéricos n-dimensionales + álgebra lineal (Batch 5). AMBAS PURO-Rust, SIN C
# (sin BLAS/LAPACK/openblas/mkl ni ningún `*-sys`) → preservan el binario único estático.
#   ndarray : tipo array n-dimensional + vectorización/broadcasting/reducciones.
#   faer    : álgebra lineal densa puro-Rust (solve/det/inv/eig/svd), con SIMD (pulp/gemm).
# `default-features = false`: se desactiva `rayon` (multihilo) porque arrastra `spindle →
# atomic-wait → windows-sys` (un crate `*-sys`); la regla "cero `*-sys`" manda sobre el
# multihilo. Queda el SIMD (pulp) → sigue rápido y 100% puro-Rust sin `*-sys`.
ndarray = "0.16"
faer = { version = "0.24", default-features = false, features = ["std", "linalg"] }
# Postgres nativo (M1). Driver SYNC `postgres` (envuelve tokio-postgres con su propio
# runtime tokio interno → el intérprete sigue sync). Puro-Rust + TLS rustls (mismo backend
# ring que el resto de stdlib) → binario único intacto, sin `*-sys`.
postgres = { version = "0.19", features = [
    "with-chrono-0_4",       # timestamp/date ↔ chrono (ya es dep)
    "with-uuid-0_8",         # uuid ↔ uuid crate (feature disponible en este postgres)
    "with-serde_json-1",     # json/jsonb ↔ serde_json::Value (ya es dep)
] }
# NUMERIC ↔ Decimal: lo provee rust_decimal con su feature `db-postgres` (NO existe una
# feature `with-rust_decimal-1` en `postgres`).
tokio-postgres-rustls = "0.12"
uuid = "0.8"
# MySQL nativo SYNC (M2). Driver puro-Rust `mysql` (rust-mysql-simple). DOS trampas de
# features (lección M1: verificar el nombre que RESUELVE, no el del spec):
#   1) `minimal` = `flate2/zlib` → libz-sys (C). Se usa `minimal-rust` = `flate2/rust_backend`
#      (miniz_oxide puro-Rust, ya en el árbol por flate2).
#   2) `rustls-tls` = `rustls/aws_lc_rs` → aws-lc-sys (C/cmake). Se usa `rustls-tls-ring` =
#      `rustls/ring`, el MISMO backend ring que el resto del stdlib → cero `*-sys` nuevo.
# `default-features = false` apaga el `native-tls`/OpenSSL del default. TLS opt-in (§conexión).
# Verificado con `cargo tree -p synsema-stdlib`: no entra ni aws-lc-sys ni openssl ni libz-sys.
mysql = { version = "28", default-features = false, features = ["minimal-rust", "rustls-tls-ring"] }
# MongoDB (M3, primer backend NO-SQL). El crate `mongodb` es async-only → feature `sync`
# (wrapper con runtime tokio interno, como el `postgres` sync → el intérprete sigue sync).
# TRES features necesarias (verificadas en el Cargo.toml del crate, no asumidas):
#   - `sync`        : el wrapper síncrono (`mongodb::sync::{Client,Database,Collection}`).
#   - `rustls-tls`  : = `rustls/ring` + `tokio-rustls/ring` (provider RING; aws-lc va en la
#                     feature SEPARADA `rustls-tls-aws-lc`, que NO activamos → cero `*-sys`).
#   - `bson-3`      : `default-features = false` apaga el bson del default (que entra vía
#                     `compat-3-0-0`→`bson-2`); el crate tiene un `compile_error!` si no hay
#                     bson-2 NI bson-3. Activamos bson-3 (v3.1, puro-Rust) → `mongodb::bson`.
#   - `compat-3-3-0`: flag VACÍO de forward-compat que el crate EXIGE con un `compile_error!`
#                     (al venir el default desactivado, hay que activarlo a mano).
# Se apaga del default: openssl-tls y dns-resolver (SRV/`mongodb+srv://` necesitaría
# re-activar dns-resolver; el dev usa `mongodb://host:port` plano). Verificado con
# `cargo tree -p synsema-stdlib`: sin aws-lc-sys/openssl/ningún `*-sys` nuevo.
mongodb = { version = "3", default-features = false, features = ["sync", "rustls-tls", "bson-3", "compat-3-3-0"] }
# Redis (M4, 4º backend remoto, 3er paradigma: KV/cache/estructuras, NO SQL ni documentos).
# API SÍNCRONA NATIVA: la `redis::Connection` bloqueante es la base del crate; lo async vive
# detrás de features `*-comp` que NO activamos → el intérprete sigue sync (sin block_on).
# `default-features = false` apaga el default (acl/streams/geospatial/script/keep-alive + nada de
# native-tls) — sólo necesitamos la conexión sync base (Cmd/Value/ToRedisArgs/FromRedisValue, que
# NO están gateadas por feature) + TLS rustls para `rediss://`. El lock usa EVAL crudo (no el
# `redis::Script` del feature `script`).
# TLS — la trampa recurrente de M2/M3 (aws-lc-sys) NO aplica acá: el crate declara
# `rustls = { version = "0.23", default-features = false }` (sin provider) y `tls-rustls` sólo
# agrega `rustls/std` + rustls-native-certs. El provider RING entra por UNIFICACIÓN de features
# con el `rustls = { features = ["ring"] }` de este mismo stdlib (nadie activa `aws_lc_rs`). El dev
# es `redis://` plaintext; el path `rediss://` queda disponible con ring. Verificado con
# `cargo tree -p synsema-stdlib`: cero `*-sys` nuevo (siguen sólo libsqlite3-sys y windows-sys).
redis = { version = "0.32", default-features = false, features = ["tls-rustls"] }
synsema-core = { path = "crates/synsema-core" }
synsema-capabilities = { path = "crates/synsema-capabilities" }
synsema-stdlib = { path = "crates/synsema-stdlib" }
synsema-agents = { path = "crates/synsema-agents" }
synsema-llm = { path = "crates/synsema-llm" }
synsema-runtime = { path = "crates/synsema-runtime" }

[profile.release]
opt-level = 3
lto = true
