[package]
name = "synsema-capabilities"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Synsema capabilities: model, intent, enforcer, builtins"

[dependencies]
synsema-core.workspace = true
chrono.workspace = true
indexmap.workspace = true
rand.workspace = true
