[package]
name = "synsema-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Synsema core: lexer, parser, AST, value model, interpreter"

[dependencies]
num-bigint.workspace = true
num-traits.workspace = true
num-integer.workspace = true
indexmap.workspace = true
regex.workspace = true
