[package]
name = "synsema-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Synsema stdlib: http, database, templates, cron, server"

[dependencies]
synsema-core.workspace = true
synsema-capabilities.workspace = true
indexmap.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
# Arrays (Batch 5): serializar `SynValue::Array` a JSON anidado en las respuestas serve.
ndarray.workspace = true
# Feature `secret`: builtins env/secret/reveal/bearer + crypto (hmac_sha256/verify_hmac/
# constant_time_eq). Todo puro-Rust (RustCrypto), sin C → binario único estático.
# chrono ya está en el workspace (sin feature `clock`); se usa para el timestamp del audit.
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
chrono.workspace = true
# A2 stack web: gzip (miniz_oxide puro-Rust, sin C) + TLS (rustls con backend ring).
flate2 = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
# A2 batch 2 — ACME/auto-HTTPS. instant-acme (cliente ACME) con backend ring (sin C/cmake),
# cliente HTTP propio (hyper-rustls) y `rcgen` interno para keygen/CSR en finalize().
# tokio = runtime async acotado SÓLO para obtener/renovar el cert; el server sigue std::net.
instant-acme = { version = "0.8", default-features = false, features = ["ring", "hyper-rustls", "rcgen"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "time", "io-util", "sync", "macros"] }
# Lote 2 — rewrite de serve a async: hyper (HTTP/1.1 + HTTP/2) + adaptadores tokio +
# TLS async (tokio-rustls con ring). El intérprete sigue sync por request (spawn_blocking).
hyper = { version = "1", default-features = false, features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", default-features = false, features = ["server", "server-auto", "server-graceful", "http1", "http2", "tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }

# Sólo Windows: leer HKCR para replicar mimetypes.read_windows_registry (content-type
# de estáticos con extensión no pinneada). En otros SO el override del registro es no-op.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
# Cert self-signed para los tests de integración TLS (backend ring, sin C/cmake).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
