[package]
name = "syntecnia-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Syntecnia CLI — the `syntecnia` command"

# The product command is `syntecnia` (single, unified name). The crate is still
# `syntecnia-cli` (built with `-p syntecnia-cli`), but it produces a `syntecnia` binary.
[[bin]]
name = "syntecnia"
path = "src/main.rs"

[dependencies]
syntecnia-core.workspace = true
syntecnia-capabilities.workspace = true
syntecnia-stdlib.workspace = true
syntecnia-agents.workspace = true
syntecnia-llm.workspace = true
syntecnia-runtime.workspace = true
serde_json.workspace = true
