[package]
name = "syntecnia-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Syntecnia llm + human: provider, context, validator, interaction"

[dependencies]
syntecnia-core.workspace = true
syntecnia-capabilities.workspace = true
indexmap.workspace = true
regex.workspace = true
