[package]
name = "syntecnia-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Syntecnia runtime: engine, daemon, persistence, recovery, speculative, error_reporter"

[dependencies]
syntecnia-core.workspace = true
syntecnia-capabilities.workspace = true
syntecnia-stdlib.workspace = true
syntecnia-agents.workspace = true
syntecnia-llm.workspace = true
indexmap.workspace = true
regex.workspace = true
serde_json.workspace = true
# StatePersistence cross-run: SQLite (mismo esquema/ruta que el oráculo persistence.py).
rusqlite.workspace = true
