[package]
name = "syntecnia-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Syntecnia stdlib: http, database, templates, cron, server"

[dependencies]
syntecnia-core.workspace = true
syntecnia-capabilities.workspace = true
indexmap.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
# A2 stack web: gzip (miniz_oxide puro-Rust, sin C) + TLS (rustls con backend ring).
flate2 = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
# A2 batch 2 — ACME/auto-HTTPS. instant-acme (cliente ACME) con backend ring (sin C/cmake),
# cliente HTTP propio (hyper-rustls) y `rcgen` interno para keygen/CSR en finalize().
# tokio = runtime async acotado SÓLO para obtener/renovar el cert; el server sigue std::net.
instant-acme = { version = "0.8", default-features = false, features = ["ring", "hyper-rustls", "rcgen"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "time", "io-util", "sync", "macros"] }

# Sólo Windows: leer HKCR para replicar mimetypes.read_windows_registry (content-type
# de estáticos con extensión no pinneada). En otros SO el override del registro es no-op.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
# Cert self-signed para los tests de integración TLS (backend ring, sin C/cmake).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
